# ff-funds

./: .pre-commit-config.yaml  README.md  challenge.md  pyproject.toml
data/: ff_comps.csv  mbie_fund_holdings.json
docs/: challenge.md  future-work.md
notebooks/: match_companies.ipynb
src/fffunds/: __init__.py  company.py  fund.py
tests/: ff_names_matched.csv  test_matching.py
